# EpsilonRender

./: .gitignore  .gitmodules  App.cpp  App.h  CMakeLists.txt  Context.cpp  Context.h  ContextRenderer.cpp  ContextRenderer.h  ContextWindow.cpp  ContextWindow.h  Mesh.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContextRenderer.cpp  VulkanContextRenderer.h  VulkanContextWindow.cpp  VulkanContextWindow.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializationException.h  VulkanInstance.cpp  VulkanInstance.h  VulkanMesh.cpp  VulkanMesh.h  VulkanMeshHelper.cpp  VulkanMeshHelper.h  VulkanQueueFamilies.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.cpp  (+4 more)
ImGui/: ImGuiContext.cpp  ImGuiContext.h
Shaders/: CMakeLists.txt  test.frag  test.vert
Vulkan/: VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContextWindow.cpp  VulkanContextWindow.h  VulkanDevice.cpp  VulkanInstance.cpp  VulkanMesh.h  VulkanMeshHelper.h  VulkanQueueFamilies.h  VulkanSwapChain.h
lib/: CMakeLists.txt
lib/docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h  glad.h
lib/glad/src/: glad.c
src/: App.cpp  App.h  ContextWindow.cpp  ContextWindow.h  Epsilon.h  Material.cpp  Material.h  Math.h  Mesh.cpp  Mesh.h  Object.h  ObjectManager.cpp  ObjectManager.h  RenderCommand.cpp  RenderCommand.h  RenderPipeline.cpp  RenderPipeline.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  Shader.h  ShaderModule.h  SpecificationData.hpp  Transform.cpp  Transform.h  main.cpp
src/ImGui/: ImGuiContext.cpp  ImGuiContext.h
src/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContextWindow.cpp  OpenGLContextWindow.h  OpenGLException.h  OpenGLRenderPipeline.cpp  OpenGLRenderPipeline.h  OpenGLRenderSystem.cpp  OpenGLRenderSystem.h  glMesh.cpp  glMesh.h  glShader.cpp  glShader.h
src/Vulkan/: SwapChainContext.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContextWindow.cpp  VulkanContextWindow.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDevice.cpp  VulkanDevice.h  VulkanException.h  VulkanInstance.cpp  VulkanMesh.h  VulkanQueueFamilies.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderSystem.cpp  VulkanRenderSystem.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h
